# localmemcache

./: .gitignore  AUTHORS  COPYING  INTERNALS  LICENSE  Makefile.in  README  Rakefile  THANKS  Vagrantfile  aclocal.m4  configure  configure.in  localmemcache.gemspec
bench/: common.rb  gdbm_vs_lmc  gdbm_vs_lmc.rb  lmc_bench  lmc_bench.rb  memcached_bench  memcached_bench.rb  tokyo_cabinet_bench  tokyo_cabinet_bench.rb  tyrant_bench  tyrant_bench.rb
example/: compile.sh  hello  hello.c  hello.rb
site/: index.html  style.css
site/doc/: created.rid  fr_class_index.html  fr_file_index.html  fr_method_index.html  index.html
site/doc/classes/: LocalMemCache.html
site/doc/classes/LocalMemCache/: ArgError.html  DBVersionNotSupported.html  InitError.html  LocalMemCacheError.html  LockError.html  LockTimedOut.html  MemoryPoolClosed.html  MemoryPoolFull.html  OutOfMemoryError.html  RecoveryFailed.html  SharedObjectStorage.html  ShmError.html  ShmLockFailed.html  ShmUnlockFailed.html
site/doc/classes/LocalMemCache.src/: M000001.html  M000002.html  M000003.html  M000004.html  M000005.html  M000007.html  M000008.html  M000010.html  M000011.html  M000012.html  M000013.html  M000014.html
site/doc/classes/LocalMemCache/SharedObjectStorage.src/: M000015.html  M000016.html  M000017.html  M000018.html
site/doc/files/: extconf_rb.html  localmemcache_rb.html  rblocalmemcache_c.html
site/doc/files/__/src/ruby-binding/: extconf_rb.html  localmemcache_rb.html  rblocalmemcache_c.html
src/: Makefile.in  Rakefile  configure  configure.in  hashtable.c  hashtable.h  lmc_common.c  lmc_common.h  lmc_config.h.in  lmc_error.c  lmc_error.h  lmc_hashtable.c  lmc_hashtable.h  lmc_lock.c  lmc_lock.h  lmc_shm.c  lmc_shm.h  lmc_valloc.c  lmc_valloc.h  localmemcache.c  localmemcache.h  lock.c  lock.h  shm.c  shm.h  valloc.c  valloc.debug.c  valloc.h
src/ruby-binding/: extconf.rb  localmemcache.rb  rblocalmemcache.c
src/tests/: .lmc.rb.swp  alloc  alloc.rb  allocfailure  allocfailure.rb  bacon.rb  bench  bench-append  bench-append.rb  bench.rb  bench_keys  bench_keys.rb  capi.c  capi.sh  console  console.rb  crash  crash-small  crash-small.rb  crash.rb  extconf.rb  failed  iter  iter.rb  lmc  lmc.rb  lmctestapi.c  parallelwrite  parallelwrite.rb  run-all-tests  runtest.sh  sanity-test  shm  shm.rb  torture.rb  ttalloc  ttalloc.rb  tthashtable  tthashtable.rb  ttkeys  (+7 more)
