AC_INIT(${srcdir}/lmc_config.h.in)
AC_CONFIG_HEADER(${srcdir}/lmc_config.h)
AC_PROG_CC
AC_SUBST(CC)
AC_PROG_RANLIB
AC_SUBST(RANLIB)

AC_MSG_CHECKING([version])
VERSION=`cat ${srcdir}/../VERSION`
AC_SUBST(VERSION)
AC_MSG_RESULT([$VERSION])

AC_MSG_CHECKING([installation directory prefix])

if test "$prefix" = "NONE"; then 
    if test "x$PREFIX" != "x" ; then
  prefix=$PREFIX
    else
  prefix=/usr/local
    fi
fi
AC_PREFIX_DEFAULT($prefix)
PREFIX=$ac_default_prefix
PREFIX=$prefix
exec_prefix=$PREFIX
AC_SUBST(PREFIX)
AC_MSG_RESULT([$PREFIX])



#--------------------------------------------------------------------
# Propagate prefix argument as installation directory.
#--------------------------------------------------------------------
AC_SUBST(PREFIX)


AC_OUTPUT(Makefile)
